Добавлены исключения, добавлено кеширование для более быстрого получения всех пользователей/статей/сайтов/тем